# paradox-checksum-patcher

./: Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
src/: main.rs  patch.rs
