[package]
name = "paradox-checksum-patcher"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["DaniPopes <57450786+DaniPopes@users.noreply.github.com>"]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/DaniPopes/paradox-checksum-patcher"
repository = "https://github.com/DaniPopes/paradox-checksum-patcher"

[dependencies]
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.dist]
opt-level = 3
lto = true
codegen-units = 1
strip = true
