[package]
name = "paradox-checksum-patcher"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["DaniPopes <57450786+DaniPopes@users.noreply.github.com>"]
homepage = "https://github.com/DaniPopes/paradox-checksum-patcher"
repository = "https://github.com/DaniPopes/paradox-checksum-patcher"

[dependencies]
hex-literal = "1.1"

color-eyre = "0.6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.dist]
inherits = "release"
opt-level = 3
lto = true
codegen-units = 1
strip = true
